<resources>
  <string name="app_name">Blockhouse</string>
  <string name="hint_blockhouseName">Blockhouse Name</string>
  <string name="hint_blockhouseDescription">Description </string>
  <string name="enter_blockhouse_title"> Please enter a Blockhouse Title </string>
  <string name="button_save">Save</string>
  <string name="menu_addBlockhouse">Add</string>
  <string name="menu_deleteBlockhouse">Delete</string>
  <string name="menu_cancelBlockhouse">Cancel</string>
  <string name="stats">Stats</string>
  <string name="settings">Settings</string>
  <string name="button_addImage"> Add Image </string>
  <string name="button_location">Set Location</string>
  <string name="button_delete">Delete</string>
  <string name="title_activity_map">Map</string>
  <string name="select_Blockhouse_image">Select blockhouse image</string>
  <string name="change_Blockhouse_image">Change blockhouse image</string>
  <string name="visited">Blockhouse Visited</string>
  <string name="hint_lat">Lat:    00.000 </string>
  <string name="hint_lng">Lng:    00.000 </string>
  <string name="name">Name</string>
  <string name="email">Email</string>
  <string name="pass">Password</string>
  <string name="login">Login</string>
  <string name="register">Register</string>
  <string name="logout">Logout</string>
  <string name="title_activity_maps">Map</string>
  <string name="note_content">notes</string>
  <string name="add_note">add note</string>
  <string name="set_date">set Date</string>
  <string name="visited_blockhouses">Visited Blockhouses:</string>
  <string name="total_blockhouses">Total Blockhouses:</string>
  <string name="delete_image">DELETE IMAGE</string>
  <string name="date_visited_hint">Date Visited: DD/MM/YYYY</string>
  <string name="menu_save_Blockhouse">Save Blockhouse</string>
  <string name="blockhouse_title_placeholder">Blockhouse Title</string>
  <string name="blockhouse_image_placeholder">Blockhouse Image</string>
  <string name="blockhouse_description_placeholder">Description</string>
  <string name="_00_000000">00.000000</string>
  <string name="image">image</string>
  <string name="change_image">Change Image</string>
  <string name="title_activity_blockhouse_list">Blockhouse</string>
  <string name="title_activity_blockhouse">Blockhouse</string>
  <string name="title_activity_edit_location">Blockhouse</string>
  <string name="title_activity_login"> Signup | Login to Blockhouse</string>
  <string name="title_activity_blockhouse_maps">Map of all Blockhouses</string>
  <string name="favourite"> Favourite !</string>
  <string name="menu_logout">Log out</string>
  <string name="title_home">Home</string>
  <string name="google_map_key">AIzaSyCy3B4ni4-AYRg7H6hB3Q-zo73Y3zyQgm4</string>
  <string name="lat">lat:</string>
  <string name="lng">long:</string>
  <string name="rating_label">rate this blockhouse</string>
  <string name="edit_map">edit the map</string>
  <string name="show_map">show map</string>

</resources>
