<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:fillViewport="true"
    android:scaleType="fitStart"
    tools:context=".activities.BlockhouseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/blockhouseTitle"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:hint="@string/hint_blockhouseTitle"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="8dp"
                    android:text="@string/hint_lat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:hint="@string/hint_blockhouseDescription"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/lng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="8dp"
                    android:text="@string/hint_lng" />

            </LinearLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:clickable="false" />

            <Button
                android:id="@+id/blockhouseLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@color/colorAccent"
                android:text="@string/button_location"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/note_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>

            <EditText
                android:id="@+id/noteContent"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="start"
                android:hint="Note Content"
                android:inputType="textMultiLine"
                android:textColorHint="@color/colorAccent" />
            <Button
                android:id="@+id/add_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:background="@color/colorAccent"
                android:text="ADD NOTE"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/visited" />

                <Button
                    android:id="@+id/setDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorAccent"
                    android:text="SET DATE"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textSize="28dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/blockhouseImage"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/splash"
                android:contentDescription="TODO" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>